<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvAllInc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivMainBackgroung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/splav_1" />

    <Button
        android:id="@+id/bt_riverrafting"
        style="@style/custom_button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:text="@string/bt_river_rafting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_horseride"
        style="@style/custom_button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/bt_horse_ride"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_riverrafting" />

    <Button
        android:id="@+id/bt_waterfall_hike"
        style="@style/custom_button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:text="@string/bt_waterfall_hike"
        app:layout_constraintEnd_toEndOf="@+id/bt_horseride"
        app:layout_constraintTop_toBottomOf="@+id/bt_horseride" />

    <Button
        android:id="@+id/bt6"
        style="@style/custom_button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:text="@string/bt_overnight_hike"
        app:layout_constraintEnd_toEndOf="@+id/bt_waterfall_hike"
        app:layout_constraintTop_toBottomOf="@+id/bt_waterfall_hike" />

    <Button
        android:id="@+id/bt7"
        style="@style/custom_button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:text="@string/bt_mountains"
        app:layout_constraintEnd_toEndOf="@+id/bt6"
        app:layout_constraintTop_toBottomOf="@+id/bt6" />
    <Button
        android:id="@+id/bt_hikingtrip"
        style="@style/custom_button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:text="@string/bt_walk"
        app:layout_constraintStart_toStartOf="@+id/bt_riverrafting"
        app:layout_constraintTop_toBottomOf="@+id/bt_riverrafting" />

    <Button
        android:id="@+id/bt_fishing"
        style="@style/custom_button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:text="@string/bt_fishing"
        app:layout_constraintStart_toStartOf="@+id/bt_hikingtrip"
        app:layout_constraintTop_toBottomOf="@+id/bt_hikingtrip" />

    <Button
        android:id="@+id/bt_mashroomhike"
        style="@style/custom_button"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginTop="30dp"
        android:text="@string/bt_mashrooms"
        app:layout_constraintStart_toStartOf="@+id/bt_fishing"
        app:layout_constraintTop_toBottomOf="@+id/bt_fishing" />

    <TextView
        android:id="@+id/tvAll"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/tv_order"
        android:textColor="@color/yellow"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_mashroomhike" />

    <TextView
        android:id="@+id/tvAll3"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/tv_reviews"
        android:textColor="@color/yellow"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="@+id/tvAll" />

    <TextView
        android:id="@+id/tvAll2"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/tv_contact"
        android:textColor="@color/yellow"
        android:textSize="18dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAll" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="italic|bold"
        android:text="@string/tv_edelweiss_travel_agency"
        android:background="@drawable/title_background"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivMainBackgroung" />

</androidx.constraintlayout.widget.ConstraintLayout>